fix: :sparkles: right icon of combobox alignment

--- a/src/components/pd-combobox/pd-combobox.scss
+++ b/src/components/pd-combobox/pd-combobox.scss
@@ -72,7 +72,7 @@
         }
 
         &.right {
-            right: 0.65rem;
+            right: 0.25rem;
         }
     }
 
